--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,8 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.joda-time-2.8.2.jar}:\
-    ${libs.PostgreSQLDriver.classpath}
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
