--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,16 +30,27 @@ dist.jar=${dist.dir}/Biblioteca.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.joda-time-2.8.2.jar=joda-time-2.8.2.jar
+file.reference.commons-beanutils-1.8.2.jar=dist/lib/commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=dist/lib/commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=dist/lib/commons-digester-2.1.jar
+file.reference.commons-logging-1.1.jar=dist/lib/commons-logging-1.1.jar
+file.reference.jasperreports-6.2.0.jar=dist/lib/jasperreports-6.2.0.jar
+file.reference.jasperreports-functions-6.2.0.jar=dist/lib/jasperreports-functions-6.2.0.jar
+file.reference.joda-time-2.8.2.jar=dist/lib/joda-time-2.8.2.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.joda-time-2.8.2.jar}:\
     ${libs.PostgreSQLDriver.classpath}:\
     ${libs.beans-binding.classpath}:\
-    ${libs.JasperReportsMax.classpath}
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.jasperreports-6.2.0.jar}:\
+    ${file.reference.jasperreports-functions-6.2.0.jar}:\
+    ${file.reference.joda-time-2.8.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
